# GaiZhangYe

./: .env.example  .gitignore  GaiZhangYe.exe.spec  README.md  README_HTML.md  main.py  pyproject.toml  requirements.txt  run_web.sh  test_stamp_overlay.py  ui_test_example.py
.claude/: settings.local.json
GaiZhangYe/core/: batch_convert.py  data_communication.py  file_manager.py  file_processor.py  image_processor.py  stamp_overlay.py  stamp_prepare.py  word_processor.py
GaiZhangYe/core/basic/: file_manager.py  file_processor.py  pdf_processor.py  word_processor.py
GaiZhangYe/core/entrypoints/: cli_start.py  start_service.bat  start_service.py
GaiZhangYe/core/models/: config.py  exceptions.py
GaiZhangYe/core/services/: batch_convert.py  stamp_overlay.py  stamp_prepare.py
GaiZhangYe/entrypoints/: gui.py  run_web.py  start_web.py
GaiZhangYe/ui/: batch_convert_panel.py  stamp_overlay_panel.py  stamp_prepare_panel.py  styles.py
GaiZhangYe/utils/: config.py  file_sorter.py  logger.py
GaiZhangYe/web/: __init__.py  app.py
GaiZhangYe/web/routes/: api.py  pages.py
GaiZhangYe/web/static/css/: htsc-theme.css  modern-theme.css
GaiZhangYe/web/templates/: index.html
GaiZhangYe/web/templates/pages/: prepare_stamp.html  stamp_overlay.html  word_to_pdf.html
build_tools/: build.bat  build.spec  clean.bat
dist_web/: README.txt
reference/: main_window.py  pdf_panel.py  stamp_panel.py  tools_panel.py
