[project]
name = "GaiZhangYe"
version = "0.1.0"
description = "盖章页处理工具：准备盖章页、盖章页覆盖、批量Word转PDF"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.10.19"
dependencies = [
  "pywin32>=306",          # Word处理
  "pymupdf>=1.24.0",       # PDF处理
  "pillow>=10.2.0",        # 图片处理
  "pydantic-settings>=2.0",# 配置加载
  "python-dotenv>=1.0",
  "flask>=3.1.2",
  "cors>=1.0.1",
  "flask-cors>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",           # 测试
  "ruff>=0.1.0",           # 代码规范
  "uv>=0.1.0",             # 包管理
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "GaiZhangYe/**/*",
  "!GaiZhangYe/business_data/**",
  "!GaiZhangYe/logs/**",
  "!GaiZhangYe/**/__pycache__/**",
  "!**/.git/**",
  "!**/.venv/**",
  "!**/test_images/**",
  "!**/test_target_files/**",
  "!*.pyc",
  "!*.pyo",
]
